tests/typechecking/valid/function3.ml
let rec adder x y = x + y
in adder 2 2