tests/typechecking/invalid/function1.ml
let rec f a b c = a + b + c in
f 1 1